--- a/recipes/chili-egg-toast.html
+++ b/recipes/chili-egg-toast.html
@@ -7,8 +7,19 @@
 <ul>
     <li>2 Eggs</li>
     <li>2 Slices of your preffered bread</li>
-    <li>2 Tbsp chili oil</li>
+    <li>4 Tbsp chili oil</li>
     <li>1/2 Avocado</li>
     <li>Salt</li>
     <li><em>Optional: Butter</em></li>
 </ul>
+<h2><strong>Steps</strong></h2>
+<ol>
+    <li>Scoop out the inside of your half-avocado and smash into a spreadable paste</li>
+    <li>Crack open an egg into a small bowl and whisk till scrambled. Add about 5 dashes of salt.</li>
+    <li>Heat a pan on high heat then add 2 tbsp of chili oil. </li>
+    <li>Once the chili oil is bubbling, add your egg. Then turn off your heat. The residual heat will cook the egg.</li>
+    <li>Heat a seperate pan to medium heat to toast your bread. Add about 1/2 a tbsp of butter if you desire.</li>
+    <li>Remove egg from first pan.</li>
+    <li>Spread your avocado spread onto toast then lay egg on top.</li>
+    <li>Repeat steps 2-7 for second egg.</li>
+</ol>
