--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chili-egg-toast.html">Chili Egg Toast</a>
+    <ul>
+        <li><a href="recipes/chili-egg-toast.html">Chili Egg Toast</a></li>
+        <li><a href="recipes/wings.html">Wings</a></li>
+    </ul>
+    
 </body>
 </html>
