--- a/recipes/wings.html
+++ b/recipes/wings.html
@@ -3,7 +3,8 @@
 <h2><strong>Description</strong></h2>
 <p>This is an easy chicken wing recipe that can be prepared in an air fryer.</p>
 <p>A wing sauce recipe is also included but you can use your own if you feel.</p>
-<h2>Ingredients</h2>
+<h2><strong>Ingredients</strong></h2>
+<h3>Wing Seasoning:</h3>
 <ul>
     <li>1 Lbs. of chicken wings</li>
     <li>Baking powder</li>
@@ -11,4 +12,12 @@
     <li>1 Tsp garlic powder</li>
     <li>1 Tsp salt</li>
     <li>1 Tsp black pepper</li>
+</ul>
+<h3>Wing Sauce:</h3>
+<ul>
+    <li>Miranda's creamy style ghost pepper wing sauce</li>
+    <li>Any hot sauce to up the spice</li>
+    <li>2 Tbsp of gochujong</li>
+    <li>Sweet chili soy sauce</li>
+    <li>2 Tbsp butter</li>
 </ul>
