--- a/recipes/wings.html
+++ b/recipes/wings.html
@@ -7,7 +7,7 @@
 <h3>Wing Seasoning:</h3>
 <ul>
     <li>1 Lbs. of chicken wings</li>
-    <li>Baking powder</li>
+    <li>1 Tbsp baking powder</li>
     <li>2 Tbsp paprika</li>
     <li>1 Tsp garlic powder</li>
     <li>1 Tsp salt</li>
@@ -21,3 +21,20 @@
     <li>Sweet chili soy sauce</li>
     <li>2 Tbsp butter</li>
 </ul>
+<h2><strong>Steps</strong></h2>
+<h3>Wings:</h3>
+<ol>
+    <li>Preheat air fryer to 400°F.</li>
+    <li>Add Wings, and seasonings, into a large bowl.</li>
+    <li>Place a plate or lid onto the bowl and shake violently. </li>
+    <li>Spray the airfryer basket, lightly, with pam, then add wings.</li>
+    <li>Cook for 10 minutes, shift them after 5 minutes.</li>
+    <li>Take out wings and toss in sauce then serve.</li>
+</ol>
+<h3>Wing Sauce:</h3>
+<ol>
+    <li>Heat a sauce pan at low heat.</li>
+    <li>Add half a stick of butter to the sauce pan and let it get soft.</li>
+    <li>Add rest of the wing sauce ingredients and let it melt and mix.</li>
+    <li>Leave the sauce on simmer until wings are cooked.</li>
+</ol>
