--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/chili-egg-toast.html">Chili Egg Toast</a></li>
-        <li><a href="recipes/wings.html">Wings</a></li>
-        <li><a href="recipes/bang-bang-sauce.html">Bang Bang Sauce</a></li>
-    </ul>
-    
+    <div class="container">
+        <h1 class="title">Odin Recipes</h1>
+        <ul id="list" class="list">
+            <li class="list_item 1"><a href="../odin-recipes/recipes/chili-egg-toast.html">Chili Scrambled Eggs</a></li>
+            <li class="list_item 2"><a href="../odin-recipes/recipes/wings.html">Hot Wings</a></li>
+            <li class="list_item 3"><a href="../odin-recipes/recipes/bang-bang-sauce.html">Bang Bang Sauce</a></li>
+        </ul>
+    </div>
 </body>
 </html>
