Added recipes.css for recipe pages styles.
Added appropriate tages to recipes html.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1 class="title">Odin Recipes</h1>
-        <ul id="list" class="list">
+        <ul class="list">
             <li class="list_item 1"><a href="../odin-recipes/recipes/chili-egg-toast.html">Chili Scrambled Eggs</a></li>
             <li class="list_item 2"><a href="../odin-recipes/recipes/wings.html">Hot Wings</a></li>
             <li class="list_item 3"><a href="../odin-recipes/recipes/bang-bang-sauce.html">Bang Bang Sauce</a></li>
