--- a/recipes/bang-bang-sauce.html
+++ b/recipes/bang-bang-sauce.html
@@ -1,15 +1,18 @@
-<h1>Bang Bang Sauce</h1>
-<img src="../images/bang-bang-sauce.jpeg" alt="Bang Bang Sauce">
-<h2><strong>Description</strong></h2>
-<p>This is a spicy-sweet sauce that you can pair with a multitude of dishes, such as shrimp.</p>
-<h2>Ingredients</h2>
-<ul>
-    <li>1/2 Cup of mayo</li>
-    <li>2 Tbsp sweet chili sauce</li>
-    <li>1 Tbsp sriracha</li>
-    <li>1 Tsp rice vinegar</li>
-</ul>
-<h2>Steps</h2>
-<ol>
-    <li>Stir mayo, chili sauce, sriracha, and rice vinegar together in a small bowl.</li>
-</ol>
+<link rel="stylesheet" href="recipes.css">
+<div class="container">
+    <h1>Bang Bang Sauce</h1>
+    <img src="../images/bang-bang-sauce.jpeg" alt="Bang Bang Sauce">
+    <h2><strong>Description</strong></h2>
+    <p>This is a spicy-sweet sauce that you can pair with a multitude of dishes, such as shrimp.</p>
+    <h2>Ingredients</h2>
+    <ul class="list ul">
+        <li>1/2 Cup of mayo</li>
+        <li>2 Tbsp sweet chili sauce</li>
+        <li>1 Tbsp sriracha</li>
+        <li>1 Tsp rice vinegar</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol class="list ol">
+        <li>Stir mayo, chili sauce, sriracha, and rice vinegar together in a small bowl. </li>
+    </ol>
+</div>
