--- a/recipes/chili-egg-toast.html
+++ b/recipes/chili-egg-toast.html
@@ -1,25 +1,28 @@
-<h1>Chili Egg on Toast</h1>
-<img src="../images/chili-oil-egg.jpeg" alt="Chili oil scrambled egg">
-<h2><strong>Description</strong></h2>
-<p>Chili oil scrambled eggs is a breakfast dish that adds a little <em>spice</em> to a classic staple.</p>
-<p>It is quick to make and can most likely be made with ingredients already in your home. 2 servings.</p>
-<h2><strong>Ingredients</strong></h2>
-<ul>
-    <li>2 Eggs</li>
-    <li>2 Slices of your preffered bread</li>
-    <li>4 Tbsp chili oil</li>
-    <li>1/2 Avocado</li>
-    <li>Salt</li>
-    <li><em>Optional: Butter</em></li>
-</ul>
-<h2><strong>Steps</strong></h2>
-<ol>
-    <li>Scoop out the inside of your half-avocado and smash into a spreadable paste</li>
-    <li>Crack open an egg into a small bowl and whisk till scrambled. Add about 5 dashes of salt.</li>
-    <li>Heat a pan on high heat then add 2 tbsp of chili oil. </li>
-    <li>Once the chili oil is bubbling, add your egg. Then turn off your heat. The residual heat will cook the egg.</li>
-    <li>Heat a seperate pan to medium heat to toast your bread. Add about 1/2 a tbsp of butter if you desire.</li>
-    <li>Remove egg from first pan.</li>
-    <li>Spread your avocado spread onto toast then lay egg on top.</li>
-    <li>Repeat steps 2-7 for second egg.</li>
-</ol>
+<div class="container">
+    <h1>Chili Egg on Toast</h1>
+    <link rel="stylesheet" href="recipes.css">
+    <img src="../images/chili-oil-egg.jpeg" alt="Chili oil scrambled egg">
+    <h2><strong>Description</strong></h2>
+    <p>Chili oil scrambled eggs is a breakfast dish that adds a little <em>spice</em> to a classic staple.</p>
+    <p>It is quick to make and can most likely be made with ingredients already in your home. 2 servings.</p>
+    <h2><strong>Ingredients</strong></h2>
+    <ul class="list ul">
+        <li >2 Eggs</li>
+        <li>2 Slices of your preffered bread</li>
+        <li>4 Tbsp chili oil</li>
+        <li>1/2 Avocado</li>
+        <li>Salt</li>
+        <li><em>Optional: Butter</em></li>
+    </ul>
+    <h2><strong>Steps</strong></h2>
+    <ol class="list ol">
+        <li>Scoop out the inside of your half-avocado and smash into a spreadable paste</li>
+        <li>Crack open an egg into a small bowl and whisk till scrambled. Add about 5 dashes of salt.</li>
+        <li>Heat a pan on high heat then add 2 tbsp of chili oil. </li>
+        <li>Once the chili oil is bubbling, add your egg. Then turn off your heat. The residual heat will cook the egg.</li>
+        <li>Heat a seperate pan to medium heat to toast your bread. Add about 1/2 a tbsp of butter if you desire.</li>
+        <li>Remove egg from first pan.</li>
+        <li>Spread your avocado spread onto toast then lay egg on top.</li>
+        <li>Repeat steps 2-7 for second egg.</li>
+    </ol>
+</div>
