--- a/recipes/wings.html
+++ b/recipes/wings.html
@@ -1,40 +1,43 @@
-<h1>Hot Wings</h1>
-<img src="../images/wings.jpeg" alt="Chicken Wings">
-<h2><strong>Description</strong></h2>
-<p>This is an easy chicken wing recipe that can be prepared in an air fryer.</p>
-<p>A wing sauce recipe is also included but you can use your own if you feel.</p>
-<h2><strong>Ingredients</strong></h2>
-<h3>Wing Seasoning:</h3>
-<ul>
-    <li>1 Lbs. of chicken wings</li>
-    <li>1 Tbsp baking powder</li>
-    <li>2 Tbsp paprika</li>
-    <li>1 Tsp garlic powder</li>
-    <li>1 Tsp salt</li>
-    <li>1 Tsp black pepper</li>
-</ul>
-<h3>Wing Sauce:</h3>
-<ul>
-    <li>Miranda's creamy style ghost pepper wing sauce</li>
-    <li>Any hot sauce to up the spice</li>
-    <li>2 Tbsp of gochujong</li>
-    <li>Sweet chili soy sauce</li>
-    <li>2 Tbsp butter</li>
-</ul>
-<h2><strong>Steps</strong></h2>
-<h3>Wings:</h3>
-<ol>
-    <li>Preheat air fryer to 400°F.</li>
-    <li>Add Wings, and seasonings, into a large bowl.</li>
-    <li>Place a plate or lid onto the bowl and shake violently. </li>
-    <li>Spray the airfryer basket, lightly, with pam, then add wings.</li>
-    <li>Cook for 10 minutes, shift them after 5 minutes.</li>
-    <li>Take out wings and toss in sauce then serve.</li>
-</ol>
-<h3>Wing Sauce:</h3>
-<ol>
-    <li>Heat a sauce pan at low heat.</li>
-    <li>Add half a stick of butter to the sauce pan and let it get soft.</li>
-    <li>Add rest of the wing sauce ingredients and let it melt and mix.</li>
-    <li>Leave the sauce on simmer until wings are cooked.</li>
-</ol>
+<link rel="stylesheet" href="recipes.css">
+<div class="container">
+    <h1>Hot Wings</h1>
+    <img src="../images/wings.jpeg" alt="Chicken Wings">
+    <h2><strong>Description</strong></h2>
+    <p>This is an easy chicken wing recipe that can be prepared in an air fryer.</p>
+    <p>A wing sauce recipe is also included but you can use your own if you feel.</p>
+    <h2><strong>Ingredients</strong></h2>
+    <h3>Wing Seasoning:</h3>
+    <ul class="list ul">
+        <li>1 Lbs. of chicken wings</li>
+        <li>1 Tbsp baking powder</li>
+        <li>2 Tbsp paprika</li>
+        <li>1 Tsp garlic powder</li>
+        <li>1 Tsp salt</li>
+        <li>1 Tsp black pepper</li>
+    </ul>
+    <h3>Wing Sauce:</h3>
+    <ul class="list ul">
+        <li>Miranda's creamy style ghost pepper wing sauce</li>
+        <li>Any hot sauce to up the spice</li>
+        <li>2 Tbsp of gochujong</li>
+        <li>Sweet chili soy sauce</li>
+        <li>2 Tbsp butter</li>
+    </ul>
+    <h2><strong>Steps</strong></h2>
+    <h3>Wings:</h3>
+    <ol class="list ol">
+        <li>Preheat air fryer to 400°F.</li>
+        <li>Add Wings, and seasonings, into a large bowl.</li>
+        <li>Place a plate or lid onto the bowl and shake violently. </li>
+        <li>Spray the airfryer basket, lightly, with pam, then add wings.</li>
+        <li>Cook for 10 minutes, shift them after 5 minutes.</li>
+        <li>Take out wings and toss in sauce then serve.</li>
+    </ol>
+    <h3>Wing Sauce:</h3>
+    <ol class="list ol">
+        <li>Heat a sauce pan at low heat.</li>
+        <li>Add half a stick of butter to the sauce pan and let it get soft.</li>
+        <li>Add rest of the wing sauce ingredients and let it melt and mix.</li>
+        <li>Leave the sauce on simmer until wings are cooked.</li>
+    </ol>
+</div>
