Added homepage link.

--- a/recipes/bang-bang-sauce.html
+++ b/recipes/bang-bang-sauce.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="recipes.css">
 <div class="container">
     <h1>Bang Bang Sauce</h1>
+    <p><a href="../index.html">Homepage</a></p>
     <img src="../images/bang-bang-sauce.jpeg" alt="Bang Bang Sauce">
     <h2><strong>Description</strong></h2>
     <p>This is a spicy-sweet sauce that you can pair with a multitude of dishes, such as shrimp.</p>
