--- a/recipes/chili-egg-toast.html
+++ b/recipes/chili-egg-toast.html
@@ -1,5 +1,6 @@
 <div class="container">
     <h1>Chili Egg on Toast</h1>
+    <p><a href="../index.html">Homepage</a></p>
     <link rel="stylesheet" href="recipes.css">
     <img src="../images/chili-oil-egg.jpeg" alt="Chili oil scrambled egg">
     <h2><strong>Description</strong></h2>
