--- a/recipes/wings.html
+++ b/recipes/wings.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="recipes.css">
 <div class="container">
     <h1>Hot Wings</h1>
+    <p><a href="../index.html">Homepage</a></p>
     <img src="../images/wings.jpeg" alt="Chicken Wings">
     <h2><strong>Description</strong></h2>
     <p>This is an easy chicken wing recipe that can be prepared in an air fryer.</p>
